--- a/virtual-keyboard-project/index.html
+++ b/virtual-keyboard-project/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Advanced Virtual Keyboard</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/animations.css">
 </head>
 <body>
     <div class="keyboard-container">
@@ -103,6 +104,7 @@
             </div>
         </div>
     </div>
-    <script type="module" src="/js/app.js"></script>
+    <div class="input-display"></div>
+    <script type="module" src="./js/app.js"></script>
 </body>
 </html>
