Fix remove Text Displaying

--- a/virtual-keyboard-project/index.html
+++ b/virtual-keyboard-project/index.html
@@ -90,7 +90,7 @@
                 <button class="key special-key" data-key="ControlLeft">Ctrl</button>
                 <button class="key special-key" data-key="MetaLeft">Win</button>
                 <button class="key special-key" data-key="AltLeft">Alt</button>
-                <button class="key space-key" data-key=" ">Space</button>
+                <button class="key space-key" data-key="Space">Space</button>
                 <button class="key special-key" data-key="AltRight">Alt</button>
                 <button class="key special-key" data-key="MetaRight">Win</button>
                 <button class="key special-key" data-key="ContextMenu">Menu</button>
